crates/svm-sdk-tests/tests/storage/singleton.stderr
error: an App can have only a single `#[storage]`
 --> $DIR/singleton.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
